[package]
name = "nc-data-export"
version = "0.1.12"
description = "N-Central Data Export Tool - Cross-platform data export utility"
authors = ["FrazierSystems"]
edition = "2021"
license = "MIT"
default-run = "nc-data-export"

[lib]
name = "nc_data_export_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nc-export"
path = "src/bin/nc_export.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
open = "5"

# Credentials
keyring = "3"
base64 = "0.22"

# Config paths
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
tempfile = "3.24.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
